Fix: top and game modal is visible when start app

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -1,5 +1,5 @@
 #modal-game {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   height: 100svh;
   background-color: var(--light-bg);
